--- a/style.css
+++ b/style.css
@@ -1,10 +1,20 @@
+.alex-alfa{
+    display: flex;
+   max-width:  1200px;
+    margin-right: 80px;
+    margin-top: 50px;
+    margin-left: 160px;
+}
+
+
 .svg-alex{
     padding-left: 16px;
+    margin-top: 20px;
 }
 
 
 .alex-div{
-width: 250px;
+width: 265px;
 height: 248px;
 top: 24px;
 left: 25px;
@@ -14,7 +24,7 @@ background-color:#FBFBFB ;
 
 
 .alex-h1{
-width: 101px;
+width: auto;
 height: 16.079601287841797px;
 opacity: 1;
 font-family: Cera Pro;
@@ -41,4 +51,112 @@ margin-top: 8px;
 color: #727272;
 padding-right: 40px;
 
+}
+
+
+.alex-sp{
+font-family: Cera Pro;
+font-weight: 700;
+font-size: 18px;
+line-height: 16px;
+letter-spacing: 0%;
+margin-top: 30px;
+color:#3D3D3D ;
+}
+
+.alex-section{
+    background-color:#FBFBFB ;
+    height: 248px;
+    width: 400px;
+    padding-left: 16px;
+}
+
+
+
+.input-alex{
+width: 215px;
+height: 40px;
+opacity: 1;
+border-radius: 6px;
+color:#ACACAC ;
+border: none;
+padding-left: 20px;
+margin-right: 0px;
+}
+
+
+.alex-btn{
+width: 85px;
+height: 40px;
+left: 269px;
+opacity: 1;
+border-top-right-radius: 6px;
+border-bottom-right-radius: 6px;
+border: none;
+background-color:#46A358 ;
+font-family: Cera Pro;
+font-weight: 700;
+font-size: 18px;
+line-height: 16px;
+letter-spacing: 0%;
+border-radius: 6px;
+color:#FFFFFF ;
+}
+
+
+
+.alex-pp{
+  width: 354px;
+height: 89px;
+font-family: Cera Pro;
+font-weight: 400;
+font-size: 13px;
+line-height: 22px;
+letter-spacing: 0%;
+color: #727272;
+opacity: 1;
+  max-width: 350px;
+}
+
+
+
+.alex-main{
+    max-width: 1160px;
+    margin-left: 160px;
+    height:88px ;
+    background-image:linear-gradient(to right, #EDF6EF, #52C368 );
+    display: flex;
+    text-align: center;
+    align-items:center;
+    justify-content:space-between;
+    padding-left: 20px;
+    padding-bottom: 5px;
+    padding-right: 20px;
+}
+
+
+.alex-shop{
+    color: #46A358;
+
+}
+
+
+
+
+.alex-p-text{
+ font-family: Cera Pro;
+font-weight: 400px;
+font-size: 14px;
+line-height: 22px;
+letter-spacing: 0%;
+color:#3D3D3D ;
+max-width: 150px;
+margin-left: 5px;
+}
+
+.alex-logo{
+    display: flex;
+    justify-content:flex-start;
+    align-items: center;
+    
 }
