--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 .svg-alex{
     padding-left: 16px;
     margin-top: 20px;
+
 }
 
 
@@ -139,7 +140,7 @@ opacity: 1;
 
 .alex-shop{
     color: #46A358;
-
+    padding-left: 5px;
 }
 
 
@@ -202,7 +203,7 @@ font-weight: 400;
 font-size: 14px;
 line-height: 30px;
 letter-spacing: 0%;
-color: #3D3D3D;
+color:#3D3D3D ;
 text-decoration: none;
 }
 
@@ -217,6 +218,7 @@ border-width: 1px;
 border-color:#46A35833 ;
 background-color:#FBFBFB ;
 margin-right: 10px;
+padding-top: 5px;
 }
 
 
